# uv-update-check

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/uv_update_check/: __main__.py  cli.py  display.py  models.py  parser.py  pypi.py  resolver.py  updater.py
tests/: conftest.py  test_cli.py  test_display.py  test_parser.py  test_pypi.py  test_resolver.py  test_updater.py
