[project]
name = "uv-update-check"
version = "0.2.0"
description = "Check for dependency updates in pyproject.toml, like ncu for uv projects"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tomlkit>=0.12",
    "packaging>=24",
    "httpx>=0.27",
    "rich>=13",
    "typer>=0.12",
    "anyio>=4",
]

[project.scripts]
uuc = "uv_update_check.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.11",
    "pytest-cov>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uv_update_check"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=uv_update_check --cov-report=term-missing"

[tool.coverage.run]
source = ["uv_update_check"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]
ignore = [
    "SIM108", # ternary operator - sometimes less readable
    "RUF",   # ruff-specific rules
]

[tool.ruff.format]
quote-style = "double"
